mongo-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-deployment
  namespace: mongodb-namespace
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb   
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
          imagePullPolicy: "Always"
          ports:
            - containerPort: 27017
            - name: "mongodb"
          volumeMounts: 
            - name: "mongodb-persistent-storage"
            - mountPath: "/data/db"   
    volumes: 
      - name: "mongodb-persistent-storage"
      - persistentVolumeClaim: 
          claimName: "mongodb-pvc"              
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: mongodb-namespace
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
